# stereo-calibration

./: CMakeLists.txt  calib_intrinsic.cpp  calib_stereo.cpp  doshow.cpp  fix_stereo.py  read_images.cpp  read_stereo.py  show_both.cpp  show_quasi.cpp  show_stereo.py  stereo_live.cpp  stereo_sgbm.py  undistort_rectify.cpp
cal_one/: both_cal.sh  cam_left.yml  cam_right.yml  cam_stereo.yml  left_cal.sh  right_cal.sh  show.sh  test.yml
cal_two/: both_cal.sh  cam_left.yml  cam_right.yml  cam_stereo.yml  defaultConfig.xml  left.mpg  left_cam.xml  left_cam2.xml  right_cam.xml  right_cam2.xml
